--- a/ips6.css
+++ b/ips6.css
@@ -1,78 +1,141 @@
-.colors{
+
+.colors {
     list-style: none;
-    
 }
-.empty{
+
+.empty {
     float: right;
     width: 80%;
-    margin-bottom: 0px;
 }
-.login{
+
+.login {
     margin-bottom: 0px;
     float: right;
-    margin-top: 1px;
+    margin-top: 10px;
     margin-right: 40px;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 200;
     width: 10%;
     padding: 5px;
     text-align: center  ;
     border: solid black;
     border-radius: 20px;
     margin-right: 15px;
-    
 }
-.heading{
-    margin-bottom: 40px;
-    margin-left: 10px;
+.login:hover{
+    background-color: black;
+    color: white;
+    transition: 140ms;
+}
+
+.heading {
+    margin-top: 50px;
     float: left ;
     width: 100%;
+    margin-bottom: 53px;
 }
-.pic{
+
+.pic {
     float: left;
     width: 48.5%;
-    height: 650px;
+    height: 600px;
+    margin-top: 100px;
     border: black solid 1.6px;
 }
-.detail{
+
+.detail {
+    margin-top: 170px;
     float: left;
     width: 30%;
     margin-left: 70px;
-    margin-top: 60px;
     height: 10px;
 }
-.detail2{
+
+.detail2 {
     float: left;
     width: 35%;
     margin-left: 70px;
     margin-top: 15px;
 }
 
-
-.white{
+.white {
     float: left;
     width: 11%;
     margin-left: 40px;
     list-style: none;
     margin-top: 70px;
 }
-.classic{
-    float: left;
-    width: 11%;
-    list-style: none;
-    margin-top: 70px;
 
-}
-.grey{
+.classic {
     float: left;
     width: 11%;
     list-style: none;
     margin-top: 70px;
+}
 
-}
-.black{
+.grey {
     float: left;
     width: 11%;
     list-style: none;
     margin-top: 70px;
+}
+
+.black {
+    float: left;
+    width: 11%;
+    list-style: none;
+    margin-top: 70px;
+}
+
+ul.navul {
+    
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:rgb(255, 255, 255);
+    clear: both;
+}
+.imgul{
+    float: left;
+    
+}
+.navul li {
+
+    float: left;
+    width: 10%;
+    
+}
+.navul li:nth-child(2){
+    margin-left: 30px;
+}
+
+.navul li {
+    display: block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navul li:hover {
+    text-decoration: underline;
+    color: rgb(0, 0, 0);
+    transition: 0.5s;
+}
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    clear: both;
+}
+
+.footer-content {
+    clear: both;
+}
+
+.footer-item {
+    float: right;
+    margin: 10px;
+    font-size: 18px;
 }
